# Native.IO

./: Native.IO.sln  Readme.md
native/: CMakeLists.txt
native/src/: native_io.cpp
native/src/include/native_io/: native_io.h
src/: CommonLibrary.cs  Native.IO.csproj  NativeLibrary.cs
src/Handles/: DataMarshal.cs  ResultMarshal.cs  StringMarshal.cs
src/Managed/: CommonLibrary.cs
src/Native.IO/: Native.IO.csproj
src/Native.IO.Services/: INativeLibrary.cs  INativeLibraryService.cs  NativeLibraryManager.cs
src/Native.IO.Services/Component/: AssemblyLibraryService.cs  PathLibraryService.cs
src/Native.IO/Handles/: DataMarshal.cs
src/Native.IO/Services/: NativeLibraryManager.cs
src/Services/: INativeLibraryService.cs  NativeLibraryManager.cs
src/Services/Component/: AssemblyLibraryService.cs
tests/: DummyLib.cs  Native.IO.Tests.csproj  Program.cs
